--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Clock & Battery Status</h1>
+        <h1>Clock Time</h1>
         <p>Credits: memecat0</p>
         <div class="time">Time: Loading...</div>
     </div>
